[gd_scene load_steps=46 format=3 uid="uid://h6kuw023umfj"]

[ext_resource type="Script" path="res://Characters/player.gd" id="1_mf5fq"]
[ext_resource type="Texture2D" uid="uid://r66tyc2uola4" path="res://Art/Pixel Adventure 1/Free/Main Characters/Mask Dude/Idle (32x32).png" id="1_wcygr"]
[ext_resource type="Texture2D" uid="uid://ty7w0lmrkoet" path="res://Art/Pixel Adventure 1/Free/Main Characters/Mask Dude/Fall (32x32).png" id="2_a8in6"]
[ext_resource type="Texture2D" uid="uid://s3kgstbdpyjy" path="res://Art/Pixel Adventure 1/Free/Main Characters/Mask Dude/Double Jump (32x32).png" id="2_ers7p"]
[ext_resource type="Texture2D" uid="uid://do6n3g27b3mvl" path="res://Art/Pixel Adventure 1/Free/Main Characters/Mask Dude/Jump (32x32).png" id="3_nwrn4"]
[ext_resource type="Texture2D" uid="uid://d02iob7cdumcm" path="res://Art/Pixel Adventure 1/Free/Main Characters/Mask Dude/Run (32x32).png" id="4_8a28q"]
[ext_resource type="Texture2D" uid="uid://uw52qrx7pwqs" path="res://Art/Pixel Adventure 1/Free/Main Characters/Mask Dude/Hit (32x32).png" id="4_8whih"]

[sub_resource type="AtlasTexture" id="AtlasTexture_3w3vj"]
atlas = ExtResource("2_ers7p")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ahcjw"]
atlas = ExtResource("2_ers7p")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_l738e"]
atlas = ExtResource("2_ers7p")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctcdf"]
atlas = ExtResource("2_ers7p")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhqax"]
atlas = ExtResource("2_ers7p")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_habre"]
atlas = ExtResource("2_ers7p")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mrg1q"]
atlas = ExtResource("4_8whih")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_v3k3x"]
atlas = ExtResource("4_8whih")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6k0is"]
atlas = ExtResource("4_8whih")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bciia"]
atlas = ExtResource("4_8whih")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ueb3"]
atlas = ExtResource("4_8whih")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xtgsa"]
atlas = ExtResource("4_8whih")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq083"]
atlas = ExtResource("4_8whih")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pjwde"]
atlas = ExtResource("1_wcygr")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p28yb"]
atlas = ExtResource("1_wcygr")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4sur7"]
atlas = ExtResource("1_wcygr")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tgdke"]
atlas = ExtResource("1_wcygr")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngp0l"]
atlas = ExtResource("1_wcygr")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ytp4i"]
atlas = ExtResource("1_wcygr")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qoacm"]
atlas = ExtResource("1_wcygr")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c34nt"]
atlas = ExtResource("1_wcygr")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kt54e"]
atlas = ExtResource("1_wcygr")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wyv8v"]
atlas = ExtResource("1_wcygr")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixl1l"]
atlas = ExtResource("1_wcygr")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_pat6q"]
atlas = ExtResource("4_8a28q")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdidi"]
atlas = ExtResource("4_8a28q")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_b07hv"]
atlas = ExtResource("4_8a28q")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_oun5x"]
atlas = ExtResource("4_8a28q")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qv72i"]
atlas = ExtResource("4_8a28q")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_kxsci"]
atlas = ExtResource("4_8a28q")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_la0av"]
atlas = ExtResource("4_8a28q")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fqtpa"]
atlas = ExtResource("4_8a28q")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w52mv"]
atlas = ExtResource("4_8a28q")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0j2pn"]
atlas = ExtResource("4_8a28q")
region = Rect2(288, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3fvr2"]
atlas = ExtResource("4_8a28q")
region = Rect2(320, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_posv2"]
atlas = ExtResource("4_8a28q")
region = Rect2(352, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_dx215"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3w3vj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ahcjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l738e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctcdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhqax")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_habre")
}],
"loop": true,
"name": &"double_jump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_a8in6")
}],
"loop": true,
"name": &"fall",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_mrg1q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v3k3x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6k0is")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bciia")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ueb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xtgsa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq083")
}],
"loop": true,
"name": &"hit",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pjwde")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p28yb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4sur7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tgdke")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngp0l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ytp4i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qoacm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c34nt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kt54e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wyv8v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixl1l")
}],
"loop": true,
"name": &"idle",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_nwrn4")
}],
"loop": true,
"name": &"jump",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pat6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kdidi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b07hv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oun5x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qv72i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kxsci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_la0av")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fqtpa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w52mv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0j2pn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3fvr2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_posv2")
}],
"loop": true,
"name": &"run",
"speed": 20.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wk832"]
size = Vector2(19, 24)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_mf5fq")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_dx215")
animation = &"hit"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 4)
shape = SubResource("RectangleShape2D_wk832")

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="EndTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
